Card/Legacy Card: IE11 styling fixes for overflow and card size (#716)
Legacy card styling was overflowing horizontally. Cards generally
were adding extra white space vertically. This fixes both so cards
in IE11 look the same as other browsers.

TEST=manual

Tested in Chrome, IE11 and Firefox.

--- a/src/ui/sass/modules/_Card.scss
+++ b/src/ui/sass/modules/_Card.scss
@@ -11,6 +11,7 @@
 
   &-child {
     flex-grow: 1;
+    height: 100%;
   }
 
   &--universal {
